// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Card/Card AllColors smoke-test 1`] = `
<div data-test-block="true">
  <div class="_card_nrlm6_5 bottomSpacingXL"
       data-color="ochre"
  >
    <div class="_cardContent_48t19_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_nrlm6_5 bottomSpacingXL"
       data-color="forest"
  >
    <div class="_cardContent_48t19_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_nrlm6_5 bottomSpacingXL"
       data-color="burgundy"
  >
    <div class="_cardContent_48t19_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_nrlm6_5 bottomSpacingXL"
       data-color="denim"
  >
    <div class="_cardContent_48t19_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_nrlm6_5 bottomSpacingXL"
       data-color="graphite"
  >
    <div class="_cardContent_48t19_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
  <div class="_card_nrlm6_5 bottomSpacingXL"
       data-color="white"
  >
    <div class="_cardContent_48t19_1">
      <div>
        Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Card Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_card_nrlm6_5"
       data-color="white"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </div>
</div>
`;

exports[`Tester/Card/Card WithAriaLabelledBy play-test 1`] = `
<div data-test-block="true">
  <section class="_card_nrlm6_5"
           data-color="white"
           aria-labelledby="dummyId"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </section>
</div>
`;

exports[`Tester/Card/Card WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       class="_card_nrlm6_5 dummyClassname"
       lang="en"
       data-testid="123ID"
       data-color="white"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </div>
</div>
`;

exports[`Tester/Card/Card WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_card_nrlm6_5"
       data-color="white"
       id="dummyIdForwardedFromRef"
  >
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
  </div>
</div>
`;
